# Self-Healing-AI-Agent

./: .gitignore  README.md
Agent/: README.md  config.example.yaml  config.py  main.py  pyproject.toml  reader.py  sender.py  storage.py
Agent/tests/: conftest.py  test_config.py  test_reader.py
Backend/: README.md  pyproject.toml  self_healing.db
Backend/.test_tmp/3d50c2dc947b46d28933b8ca10b3b738/: incidents.db
Backend/.test_tmp/770a9e35e99543918ab1d9816ace373e/: incidents.db
Backend/.test_tmp/77a4601c306140e78f7659ed624e12d7/: incidents.db
Backend/.test_tmp/9f9555a7d11b4aac9b6a96cede62419d/: incidents.db
Backend/app/: __init__.py  api.py  config.py  graph.py  llm.py  main.py  nodes.py  persistence.py  safety.py  simulator.py  state.py
Backend/self_healing_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Backend/tests/: conftest.py  test_nodes.py  test_workflow.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  styles.css
