[project]
name = "self-healing-ai-agent"
version = "0.1.0"
description = "Self-healing production system prototype powered by FastAPI and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
